--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description" content="Quiz Force, customisable revision quiz game, designed for helping people learn.">
+    <meta name="keywords" content="quiz, game, learning, programming, html, css, javascript, quiz questions, trivia">
+
     <title>Quiz Forge</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+    <!-- Style sheet links Bootstrap -->
+    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    </script>
 </head>
+
 <body>
     <div id="main">
         <div id="gameboard">
-
         </div><!-- function, MVP traversal moves player.-->
             <div id="quiz-area">
-
+                <div id="question-area">
+                    <h6 id="question">question goes here</h6>
+                    <div id="button-area">
+                        <button class="answer-button" id="button1">button 1 text</button>
+                        <button class="answer-button" id="button2">button 2 text</button>
+                        <button class="answer-button" id="button3">button 3 text</button>
+                        <button class="answer-button" id="button4">button 4 text</button>
+                        <button class="submit-button" id="submit-button">Submit</button>
+                    </div>
+                </div>
             </div>
     </div>
     <nav>
