added rough script layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div id="main">
         <div id="gameboard">
-        </div><!-- function, MVP traversal moves player.-->
+        </div><!-- function, MVP traversal moves player. maybe canvas-->
             <div id="quiz-area">
                 <div id="question-area">
                     <h6 id="question">question goes here</h6>
@@ -33,13 +33,14 @@
                         <button class="answer-button" id="button4">button 4 text</button>
                         <button class="submit-button" id="submit-button">Submit</button>
                     </div>
+                    <p id="score-counter">Score: 0</p>
                 </div>
             </div>
     </div>
     <nav>
-        <button class="nav-button" id="nav-quiz-optons">Quiz options</button>
-        <button class="nav-button" id="nav2">Json question instructions</button>
-        <button class="nav-button" id="nav3">Nav3</button>
+        <button class="nav-button" id="nav-quiz-optons"> Quiz options</button>
+        <button class="nav-button" id="json-instruction-button">Json question instructions</button>
+        <button class="nav-button" id="about-button">about</button>
     </nav>
 </body>
 </html>
